Added the oAuth test codes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+client_secret_556801595913-4sqotp18in2l09ak408f603q9u066642.apps.googleusercontent.com.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
